# vast-2017-mc1

./: .gitmodules  README.md  pyproject.toml
analysis/: Claude.ipynb  Task1.ipynb  heatmaps.py  main.py  rangers_day_routes_etc.py  scatterplot.ipynb  transit.ipynb
data/: clusters.csv  clusters0.csv  clusters2.csv  description.md
gui/: .clang-format  CMakeLists.txt  README.md  imgui.example.ini  main.py
gui/libs/imgui/: CMakeLists.txt  imgui_app.cpp  imgui_app.hpp  imgui_texture.cpp  imgui_texture.hpp
gui/src/: data.cpp  data.hpp  gui.cpp  gui.hpp  main.cpp  pathfinding.cpp  pathfinding.hpp  utility.cpp  utility.hpp
